--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://shruthishashidhar.github.io/",
-  "name": "myportfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
